# vergil-tooling

./: .commit-msg.tmp  .dur.txt  .gitignore  .prw.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  standard-tooling.toml  vergil.toml  versions.json
.claude/: settings.json
.claude/hooks/: guard.sh
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  docs.yml  epic-rollup.yml  ops.yml  publish-release.yml  publish.yml
1.4/: 404.html  index.html
1.4/changelog/: index.html
1.4/getting-started/: index.html
1.4/reference/: index.html
1.4/releases/: index.html
1.4/search/: search_index.json
2.0/: 404.html  index.html
2.0/changelog/: index.html
2.0/getting-started/: index.html
2.0/reference/: index.html
2.0/releases/: index.html
2.0/search/: search_index.json
2.1/: 404.html  index.html
2.1/changelog/: index.html
2.1/getting-started/: index.html
2.1/reference/: index.html
2.1/releases/: index.html
2.1/search/: search_index.json
dev/: 404.html  index.html
dev/changelog/: index.html
dev/getting-started/: index.html
dev/reference/: index.html
dev/releases/: index.html
dev/search/: search_index.json
docs/: git-hooks-and-validation.md  repository-standards.md
docs/audit-criteria/: README.md  docstring-accuracy.md  scope-coherence.md  site-docs-reflection.md
docs/plans/: 2026-05-04-github-config-enforcement.md  2026-05-08-610-repo-settings-coverage.md  2026-05-08-commit-type-cleanup.md  2026-05-11-org-governance-setup.md  2026-05-11-vergil-rename.md  2026-05-14-credential-management.md  2026-05-14-github-profile-repo.md  2026-05-14-permission-model.md  2026-05-15-vergil-mimir-identity.md  2026-05-18-826-private-repo-visibility-gating.md  2026-05-18-repo-config-audit.md  2026-05-20-github-repo-init-plan.md  2026-05-20-single-account-identity-tooling.md  2026-05-20-vergil-tooling-vm-adaptations.md  2026-05-20-vergil-vm-credential-provisioning.md  2026-05-20-vergil-vm-distribution.md  2026-05-20-vergil-vm-egress-filtering.md  2026-05-20-vergil-vm-repository.md  2026-05-20-vergil-vm-session-management.md  2026-05-20-vrg-release-plan.md  2026-05-30-stale-session-lifecycle.md  2026-06-05-pr-interface.md  2026-06-05-progress-framework.md  2026-06-06-1481-ghas-posture.md  2026-06-09-worktree-hygiene.md  2026-06-16-vm-shared-from.md  2026-06-24-azure-provider-consumer-vergil-tooling.md
docs/reports/: 2026-06-22-apple-container-vs-lima-local-backend.md
docs/site/: mkdocs.yml
docs/specs/: 2026-05-04-github-config-enforcement-design.md  2026-05-08-610-repo-settings-coverage-design.md  2026-05-08-commitlint-and-cliff-cleanup-design.md  2026-05-08-go-licenses-allowlist-design.md  2026-05-08-go-licenses-allowlist-plan.md  2026-05-08-java-license-audit-design.md  2026-05-08-java-license-audit-plan.md  2026-05-08-ruby-license-finder-design.md  2026-05-09-language-specific-action-patterns-design.md  2026-05-09-post-publish-tag-verification-design.md  2026-05-09-post-publish-tag-verification-plan.md  2026-05-11-org-governance-design.md  2026-05-11-template-redesign-design.md  2026-05-11-template-redesign-plan.md  2026-05-11-vergil-rename-design.md  2026-05-11-vergil-rename-plan.md  2026-05-14-credential-management-design.md  2026-05-14-github-profile-repo-design.md  2026-05-14-permission-model-design.md  2026-05-15-vergil-mimir-identity-design.md  2026-05-18-repo-config-audit-design.md  2026-05-19-hooks-path-audit-check-design.md  2026-05-19-hooks-path-audit-check-plan.md  2026-05-19-resolve-tracking-issue-design.md  2026-05-19-resolve-tracking-issue-plan.md  2026-05-19-tooling-gap-analysis-design.md  2026-05-19-vrg-git-conditional-policy-design.md  2026-05-19-wait-until-green-merge-state-design.md  2026-05-19-wait-until-green-merge-state-plan.md  2026-05-20-docker-docs-build-docker-args-design.md  2026-05-20-docker-docs-build-docker-args-plan.md  2026-05-20-github-repo-init-design.md  2026-05-20-identity-vm-isolation-design.md  2026-05-20-multi-platform-host-support-design.md  2026-05-20-single-account-identity-design.md  2026-05-20-vergil-vm-image-management-design.md  2026-05-20-vrg-release-design.md  2026-05-20-vrg-release-plan.md  2026-05-21-canonical-version-file-design.md  2026-05-24-release-orchestrator-refactor-plan.md  (+63 more)
paad/alignment-reviews/: 2026-05-04-github-config-enforcement-alignment.md  2026-05-08-610-repo-settings-coverage-alignment.md  2026-05-11-vergil-rename-alignment.md  2026-05-14-credential-management-alignment.md  2026-05-14-permission-model-alignment.md  2026-05-20-vrg-release-alignment.md
paad/pushback-reviews/: 2026-05-04-github-config-enforcement-pushback.md  2026-05-08-610-repo-settings-coverage-design-pushback.md  2026-05-11-vergil-rename-design-pushback.md  2026-05-12-org-governance-design-pushback.md  2026-05-14-credential-management-design-pushback.md  2026-05-14-permission-model-design-pushback.md
releases/: v1.4.14.md  v1.4.15.md  v1.4.16.md  v1.4.17.md  v1.4.18.md  v1.4.19.md  v1.4.20.md  v1.4.21.md  v1.4.22.md  v1.4.23.md  v1.4.24.md  v1.4.26.md  v1.4.27.md  v1.4.28.md  v1.4.29.md  v1.4.30.md  v1.4.31.md  v1.4.32.md  v1.4.33.md  v1.4.34.md  v1.4.35.md  v1.4.36.md  v2.0.10.md  v2.0.11.md  v2.0.12.md  v2.0.13.md  v2.0.14.md  v2.0.15.md  v2.0.16.md  v2.0.17.md  v2.0.18.md  v2.0.19.md  v2.0.2.md  v2.0.20.md  v2.0.21.md  v2.0.22.md  v2.0.23.md  v2.0.24.md  v2.0.25.md  v2.0.26.md  (+225 more)
tests/standard_tooling/: test_check_pr_merge.py  test_commit.py  test_config.py  test_docker.py  test_docker_cache.py  test_docker_docs.py  test_docker_run.py  test_finalize_repo.py  test_github.py  test_github_config_cli.py  test_github_config_lib.py  test_merge_when_green.py  test_pr_issue_linkage.py  test_prepare_release.py  test_st_check_pr_merge.py  test_st_commit.py  test_st_docker_cache.py  test_st_docker_docs.py  test_st_docker_run.py  test_st_docker_test.py  test_st_ensure_label.py  test_st_finalize_repo.py  test_st_generate_commands.py  test_st_github_config.py  test_st_merge_when_green.py  test_st_pr_issue_linkage.py  test_st_repo_profile.py  test_st_submit_pr.py  test_st_version.py  (+8 more)
(+1357 files in other folders)
