[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vergil-tooling"
version = "2.0.61"
description = "VERGIL — Validation Engine for Repository Governance, Integration & Lifecycle"
requires-python = ">=3.12,<4.0"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
vrg-changelog = "vergil_tooling.bin.vrg_changelog:main"
vrg-commit = "vergil_tooling.bin.vrg_commit:main"
vrg-container-cache = "vergil_tooling.bin.vrg_container_cache:main"
vrg-container-docs = "vergil_tooling.bin.vrg_container_docs:main"
vrg-container-run = "vergil_tooling.bin.vrg_container_run:main"
vrg-container-test = "vergil_tooling.bin.vrg_container_test:main"
vrg-ensure-label = "vergil_tooling.bin.vrg_ensure_label:main"
vrg-finalize-repo = "vergil_tooling.bin.vrg_finalize_repo:main"
vrg-generate-commands = "vergil_tooling.bin.vrg_generate_commands:main"
vrg-gh = "vergil_tooling.bin.vrg_gh:main"
vrg-git = "vergil_tooling.bin.vrg_git:main"
vrg-hook-guard = "vergil_tooling.bin.vrg_hook_guard:main"
vrg-github-repo-config = "vergil_tooling.bin.vrg_github_repo_config:main"
vrg-github-repo-init = "vergil_tooling.bin.vrg_github_repo_init:main"
vrg-pr-issue-linkage = "vergil_tooling.bin.vrg_pr_issue_linkage:main"
vrg-promote = "vergil_tooling.bin.vrg_promote:main"
vrg-release = "vergil_tooling.bin.vrg_release:main"
vrg-repo-profile = "vergil_tooling.bin.vrg_repo_profile:main"
vrg-resolve-tracking-issue = "vergil_tooling.bin.vrg_resolve_tracking_issue:main"
vrg-scorecard = "vergil_tooling.bin.vrg_scorecard:main"
vrg-submit-pr = "vergil_tooling.bin.vrg_submit_pr:main"
vrg-vm = "vergil_tooling.bin.vrg_vm:main"
vrg-validate = "vergil_tooling.bin.vrg_validate:main"
vrg-version = "vergil_tooling.bin.vrg_version:main"
vrg-wait-until-green = "vergil_tooling.bin.vrg_wait_until_green:main"

[dependency-groups]
dev = ["ruff", "mypy", "ty", "pytest", "pytest-cov", "pip-audit", "pip-licenses"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
vergil_tooling = ["data/*.json", "data/*.md", "data/*.sh", "data/licenses/*.txt", "configs/*.yaml", "configs/*.toml", "configs/ruby/*.yml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "ARG", "PTH", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "E402"]
"src/vergil_tooling/lib/languages.py" = ["S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
