[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vergil-tooling"
version = "2.1.45"
description = "VERGIL — Validation Engine for Repository Governance, Integration & Lifecycle"
requires-python = ">=3.12,<4.0"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = ["rich>=13.0"]

[project.scripts]
vrg-audit-approve = "vergil_tooling.bin.vrg_audit_approve:main"
vrg-await = "vergil_tooling.bin.vrg_await:main"
vrg-changelog = "vergil_tooling.bin.vrg_changelog:main"
vrg-commit = "vergil_tooling.bin.vrg_commit:main"
vrg-container-cache = "vergil_tooling.bin.vrg_container_cache:main"
vrg-container-docs = "vergil_tooling.bin.vrg_container_docs:main"
vrg-container-run = "vergil_tooling.bin.vrg_container_run:main"
vrg-docs-patch-nav = "vergil_tooling.bin.vrg_docs_patch_nav:main"
vrg-docs-stage = "vergil_tooling.bin.vrg_docs_stage:main"
vrg-ecosystem-resolve = "vergil_tooling.bin.vrg_ecosystem_resolve:main"
vrg-container-test = "vergil_tooling.bin.vrg_container_test:main"
vrg-ensure-label = "vergil_tooling.bin.vrg_ensure_label:main"
vrg-finalize-pr = "vergil_tooling.bin.vrg_finalize_pr:main"
vrg-freeze-refs = "vergil_tooling.bin.vrg_freeze_refs:main"
vrg-generate-commands = "vergil_tooling.bin.vrg_generate_commands:main"
vrg-gh = "vergil_tooling.bin.vrg_gh:main"
vrg-git = "vergil_tooling.bin.vrg_git:main"
vrg-hook-guard = "vergil_tooling.bin.vrg_hook_guard:main"
vrg-github-repo-config = "vergil_tooling.bin.vrg_github_repo_config:main"
vrg-github-repo-init = "vergil_tooling.bin.vrg_github_repo_init:main"
vrg-pr-fix-body = "vergil_tooling.bin.vrg_pr_fix_body:main"
vrg-pr-issue-linkage = "vergil_tooling.bin.vrg_pr_issue_linkage:main"
vrg-pr-await = "vergil_tooling.bin.vrg_pr_await:main"
vrg-pr-workflow = "vergil_tooling.bin.vrg_pr_workflow:main"
vrg-promote = "vergil_tooling.bin.vrg_promote:main"
vrg-release = "vergil_tooling.bin.vrg_release:main"
vrg-release-validate-inputs = "vergil_tooling.bin.vrg_release_validate_inputs:main"
vrg-repo-profile = "vergil_tooling.bin.vrg_repo_profile:main"
vrg-resolve-tooling-version = "vergil_tooling.bin.vrg_resolve_tooling_version:main"
vrg-resolve-tracking-issue = "vergil_tooling.bin.vrg_resolve_tracking_issue:main"
vrg-reword = "vergil_tooling.bin.vrg_reword:main"
vrg-sarif-evaluate = "vergil_tooling.bin.vrg_sarif_evaluate:main"
vrg-scorecard = "vergil_tooling.bin.vrg_scorecard:main"
vrg-semgrep-scan = "vergil_tooling.bin.vrg_semgrep_scan:main"
vrg-submit-pr = "vergil_tooling.bin.vrg_submit_pr:main"
vrg-update-deps = "vergil_tooling.bin.vrg_update_deps:main"
vrg-trivy-scan = "vergil_tooling.bin.vrg_trivy_scan:main"
vrg-vm = "vergil_tooling.bin.vrg_vm:main"
vrg-vm-resolve-session = "vergil_tooling.bin.vrg_vm_resolve:main"
vrg-validate = "vergil_tooling.bin.vrg_validate:main"
vrg-version = "vergil_tooling.bin.vrg_version:main"
vrg-version-divergence = "vergil_tooling.bin.vrg_version_divergence:main"
vrg-wait-until-green = "vergil_tooling.bin.vrg_wait_until_green:main"
vrg-whoami = "vergil_tooling.bin.vrg_whoami:main"
vrg-worktree-status = "vergil_tooling.bin.vrg_worktree_status:main"

[dependency-groups]
dev = ["ruff", "mypy", "ty", "pytest", "pytest-cov", "pip-audit", "pip-licenses"]

[tool.uv]
# Security floors for TRANSITIVE dependencies. These are not direct dependencies —
# they only raise the resolver's floor so a known-vulnerable version cannot be locked
# (now or on a future re-resolve). Each entry cites the advisory it closes.
#   msgpack: reaches us via pip-audit[filecache] -> cachecontrol -> msgpack.
#   <1.2.1 is GHSA-6v7p-g79w-8964; 1.2.1 is the fix.
constraint-dependencies = ["msgpack>=1.2.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
vergil_tooling = ["data/*.json", "data/*.md", "data/*.sh", "data/licenses/*.txt", "configs/*.yaml", "configs/*.toml", "configs/ruby/*.yml"]
"vergil_tooling.lib.pr_workflow.prompts" = ["*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "ARG", "PTH", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "E402", "S105", "S106", "S603", "S607"]
"src/vergil_tooling/lib/languages.py" = ["S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
